@@ -11,7 +11,6 @@ import javafx.scene.control.Tooltip;
 import javafx.scene.input.MouseButton;
 
 import org.jabref.gui.DialogService;
-import org.jabref.gui.Globals;
 import org.jabref.gui.externalfiletype.ExternalFileType;
 import org.jabref.gui.externalfiletype.ExternalFileTypes;
 import org.jabref.gui.fieldeditors.LinkedFileViewModel;
@@ -20,6 +19,7 @@ import org.jabref.gui.maintable.BibEntryTableViewModel;
 import org.jabref.gui.maintable.ColumnPreferences;
 import org.jabref.gui.maintable.MainTableColumnFactory;
 import org.jabref.gui.maintable.MainTableColumnModel;
+import org.jabref.gui.util.TaskExecutor;
 import org.jabref.gui.util.ValueTableCellFactory;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.model.database.BibDatabaseContext;
@@ -35,6 +35,7 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
     private final DialogService dialogService;
     private final BibDatabaseContext database;
     private final PreferencesService preferencesService;
+    private final TaskExecutor taskExecutor;
 
     /**
      * Creates a joined column for all the linked files.
@@ -42,11 +43,13 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
     public FileColumn(MainTableColumnModel model,
                       BibDatabaseContext database,
                       DialogService dialogService,
-                      PreferencesService preferencesService) {
+                      PreferencesService preferencesService,
+                      TaskExecutor taskExecutor) {
         super(model);
         this.database = Objects.requireNonNull(database);
         this.dialogService = dialogService;
         this.preferencesService = preferencesService;
+        this.taskExecutor = taskExecutor;
 
         setCommonSettings();
 
@@ -63,7 +66,8 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
                         // Only one linked file -> open directly
                         LinkedFileViewModel linkedFileViewModel = new LinkedFileViewModel(linkedFiles.get(0),
                                 entry.getEntry(),
-                                database, Globals.TASK_EXECUTOR,
+                                database,
+                                taskExecutor,
                                 dialogService,
                                 preferencesService);
                         linkedFileViewModel.open();
@@ -79,11 +83,13 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
                       BibDatabaseContext database,
                       DialogService dialogService,
                       PreferencesService preferencesService,
-                      String fileType) {
+                      String fileType,
+                      TaskExecutor taskExecutor) {
         super(model);
         this.database = Objects.requireNonNull(database);
         this.dialogService = dialogService;
         this.preferencesService = preferencesService;
+        this.taskExecutor = taskExecutor;
 
         setCommonSettings();
 
@@ -105,8 +111,8 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
     }
 
     private String createFileTooltip(List<LinkedFile> linkedFiles) {
-        if (linkedFiles.size() > 0) {
-            return Localization.lang("Open file %0", linkedFiles.get(0).getLink());
+        if (!linkedFiles.isEmpty()) {
+            return Localization.lang("Open file %0", linkedFiles.getFirst().getLink());
         }
         return null;
     }
@@ -122,7 +128,7 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
             LinkedFileViewModel linkedFileViewModel = new LinkedFileViewModel(linkedFile,
                     entry.getEntry(),
                     database,
-                    Globals.TASK_EXECUTOR,
+                    taskExecutor,
                     dialogService,
                     preferencesService);
 
@@ -139,7 +145,7 @@ public class FileColumn extends MainTableColumn<List<LinkedFile>> {
         if (linkedFiles.size() > 1) {
             return IconTheme.JabRefIcons.FILE_MULTIPLE.getGraphicNode();
         } else if (linkedFiles.size() == 1) {
-            return ExternalFileTypes.getExternalFileTypeByLinkedFile(linkedFiles.get(0), true, preferencesService.getFilePreferences())
+            return ExternalFileTypes.getExternalFileTypeByLinkedFile(linkedFiles.getFirst(), true, preferencesService.getFilePreferences())
                                     .map(ExternalFileType::getIcon)
                                     .orElse(IconTheme.JabRefIcons.FILE)
                                     .getGraphicNode();
