@@ -5,7 +5,7 @@ import javafx.scene.paint.Color;
 public class ColorUtil {
 
     public static String toRGBCode(Color color) {
-        return String.format("#%02X%02X%02X",
+        return "#%02X%02X%02X".formatted(
                 (int) (color.getRed() * 255),
                 (int) (color.getGreen() * 255),
                 (int) (color.getBlue() * 255));
@@ -20,6 +20,6 @@ public class ColorUtil {
     }
 
     public static String toHex(Color validFieldBackgroundColor) {
-        return String.format("#%02x%02x%02x", (int) validFieldBackgroundColor.getRed(), (int) validFieldBackgroundColor.getGreen(), (int) validFieldBackgroundColor.getBlue());
+        return "#%02x%02x%02x".formatted((int) validFieldBackgroundColor.getRed(), (int) validFieldBackgroundColor.getGreen(), (int) validFieldBackgroundColor.getBlue());
     }
 }
