@@ -48,7 +48,7 @@ class StudyFetcher {
     }
 
     /**
-     * Queries all Databases on the given searchQuery.
+     * Queries all catalogs on the given searchQuery.
      *
      * @param searchQuery The query the search is performed for.
      * @return Mapping of each fetcher by name and all their retrieved publications as a BibDatabase
@@ -63,17 +63,17 @@ class StudyFetcher {
     private FetchResult performSearchOnQueryForFetcher(String searchQuery, SearchBasedFetcher fetcher) {
         try {
             List<BibEntry> fetchResult = new ArrayList<>();
-            if (fetcher instanceof PagedSearchBasedFetcher) {
-                int pages = ((int) Math.ceil(((double) MAX_AMOUNT_OF_RESULTS_PER_FETCHER) / ((PagedSearchBasedFetcher) fetcher).getPageSize()));
+            if (fetcher instanceof PagedSearchBasedFetcher basedFetcher) {
+                int pages = (int) Math.ceil(((double) MAX_AMOUNT_OF_RESULTS_PER_FETCHER) / basedFetcher.getPageSize());
                 for (int page = 0; page < pages; page++) {
-                    fetchResult.addAll(((PagedSearchBasedFetcher) fetcher).performSearchPaged(searchQuery, page).getContent());
+                    fetchResult.addAll(basedFetcher.performSearchPaged(searchQuery, page).getContent());
                 }
             } else {
                 fetchResult = fetcher.performSearch(searchQuery);
             }
             return new FetchResult(fetcher.getName(), new BibDatabase(fetchResult));
         } catch (FetcherException e) {
-            LOGGER.warn(String.format("%s API request failed", fetcher.getName()), e);
+            LOGGER.warn("%s API request failed".formatted(fetcher.getName()), e);
             return null;
         }
     }
