@@ -13,6 +13,9 @@ import java.util.Optional;
 import java.util.stream.Collectors;
 
 import org.jabref.logic.importer.FulltextFetcher;
+import org.jabref.logic.importer.ImportFormatPreferences;
+import org.jabref.logic.importer.ImporterPreferences;
+import org.jabref.logic.importer.WebFetchers;
 import org.jabref.logic.net.URLDownload;
 import org.jabref.logic.preferences.DOIPreferences;
 import org.jabref.model.entry.BibEntry;
@@ -32,12 +35,12 @@ import org.slf4j.LoggerFactory;
  * FulltextFetcher implementation that follows the DOI resolution redirects and scans for a full-text PDF URL.
  *
  * Note that we also have custom fetchers in place.
- * See {@link org.jabref.logic.importer.WebFetchers#getFullTextFetchers(org.jabref.logic.importer.ImportFormatPreferences)}.
+ * See {@link WebFetchers#getFullTextFetchers(ImportFormatPreferences, ImporterPreferences)}.
  */
 public class DoiResolution implements FulltextFetcher {
 
     private static final Logger LOGGER = LoggerFactory.getLogger(DoiResolution.class);
-    private DOIPreferences doiPreferences;
+    private final DOIPreferences doiPreferences;
 
     public DoiResolution(DOIPreferences doiPreferences) {
         super();
@@ -118,7 +121,7 @@ public class DoiResolution implements FulltextFetcher {
             // return if only one link was found (high accuracy)
             if (links.size() == 1) {
                 LOGGER.info("Fulltext PDF found @ {}", doiLink);
-                return Optional.of(links.get(0));
+                return Optional.of(links.getFirst());
             }
             // return if links are equal
             return findDistinctLinks(links);
@@ -178,7 +181,7 @@ public class DoiResolution implements FulltextFetcher {
         }
         // equal
         if (distinctLinks.size() == 1) {
-            return Optional.of(distinctLinks.get(0));
+            return Optional.of(distinctLinks.getFirst());
         }
 
         return Optional.empty();
