@@ -12,6 +12,7 @@ import java.util.Optional;
 
 import org.jabref.logic.formatter.bibtexfields.HtmlToLatexFormatter;
 import org.jabref.logic.formatter.bibtexfields.UnicodeToLatexFormatter;
+import org.jabref.logic.journals.JournalAbbreviationRepository;
 import org.jabref.logic.layout.format.AuthorAbbreviator;
 import org.jabref.logic.layout.format.AuthorAndToSemicolonReplacer;
 import org.jabref.logic.layout.format.AuthorAndsCommaReplacer;
@@ -53,6 +54,7 @@ import org.jabref.logic.layout.format.FormatPagesForXML;
 import org.jabref.logic.layout.format.GetOpenOfficeType;
 import org.jabref.logic.layout.format.HTMLChars;
 import org.jabref.logic.layout.format.HTMLParagraphs;
+import org.jabref.logic.layout.format.HayagrivaType;
 import org.jabref.logic.layout.format.IfPlural;
 import org.jabref.logic.layout.format.Iso690FormatDate;
 import org.jabref.logic.layout.format.Iso690NamesAuthors;
@@ -108,36 +110,42 @@ class LayoutEntry {
 
     private final List<Path> fileDirForDatabase;
     private final LayoutFormatterPreferences preferences;
+    private final JournalAbbreviationRepository abbreviationRepository;
 
-    public LayoutEntry(StringInt si, List<Path> fileDirForDatabase, LayoutFormatterPreferences preferences) {
+    public LayoutEntry(StringInt si,
+                       List<Path> fileDirForDatabase,
+                       LayoutFormatterPreferences preferences,
+                       JournalAbbreviationRepository abbreviationRepository) {
         this.preferences = preferences;
+        this.abbreviationRepository = abbreviationRepository;
         this.fileDirForDatabase = Objects.requireNonNullElse(fileDirForDatabase, Collections.emptyList());
 
         type = si.i;
         switch (type) {
-            case LayoutHelper.IS_LAYOUT_TEXT:
-                text = si.s;
-                break;
-            case LayoutHelper.IS_SIMPLE_COMMAND:
-                text = si.s.trim();
-                break;
-            case LayoutHelper.IS_OPTION_FIELD:
-                doOptionField(si.s);
-                break;
-            case LayoutHelper.IS_FIELD_START:
-            case LayoutHelper.IS_FIELD_END:
-            default:
-                break;
+            case LayoutHelper.IS_LAYOUT_TEXT ->
+                    text = si.s;
+            case LayoutHelper.IS_SIMPLE_COMMAND ->
+                    text = si.s.trim();
+            case LayoutHelper.IS_OPTION_FIELD ->
+                    doOptionField(si.s);
+            default -> {
+                // IS_FIELD_START and IS_FIELD_END
+            }
         }
     }
 
-    public LayoutEntry(List<StringInt> parsedEntries, int layoutType, List<Path> fileDirForDatabase, LayoutFormatterPreferences preferences) {
+    public LayoutEntry(List<StringInt> parsedEntries,
+                       int layoutType,
+                       List<Path> fileDirForDatabase,
+                       LayoutFormatterPreferences preferences,
+                       JournalAbbreviationRepository abbreviationRepository) {
         this.preferences = preferences;
+        this.abbreviationRepository = abbreviationRepository;
         this.fileDirForDatabase = Objects.requireNonNullElse(fileDirForDatabase, Collections.emptyList());
 
         List<LayoutEntry> tmpEntries = new ArrayList<>();
-        String blockStart = parsedEntries.get(0).s;
-        String blockEnd = parsedEntries.get(parsedEntries.size() - 1).s;
+        String blockStart = parsedEntries.getFirst().s;
+        String blockEnd = parsedEntries.getLast().s;
 
         if (!blockStart.equals(blockEnd)) {
             LOGGER.warn("Field start and end entry must be equal.");
@@ -159,7 +167,7 @@ class LayoutEntry {
                         blockEntries.add(parsedEntry);
                         int groupType = parsedEntry.i == LayoutHelper.IS_GROUP_END ? LayoutHelper.IS_GROUP_START :
                                 LayoutHelper.IS_FIELD_START;
-                        LayoutEntry le = new LayoutEntry(blockEntries, groupType, fileDirForDatabase, preferences);
+                        LayoutEntry le = new LayoutEntry(blockEntries, groupType, fileDirForDatabase, preferences, abbreviationRepository);
                         tmpEntries.add(le);
                         blockEntries = null;
                     } else {
@@ -175,7 +183,7 @@ class LayoutEntry {
             }
 
             if (blockEntries == null) {
-                tmpEntries.add(new LayoutEntry(parsedEntry, fileDirForDatabase, preferences));
+                tmpEntries.add(new LayoutEntry(parsedEntry, fileDirForDatabase, preferences, abbreviationRepository));
             } else {
                 blockEntries.add(parsedEntry);
             }
@@ -384,15 +392,15 @@ class LayoutEntry {
         List<String> v = StringUtil.tokenizeToList(s, "\n");
 
         if (v.size() == 1) {
-            text = v.get(0);
+            text = v.getFirst();
         } else {
-            text = v.get(0).trim();
+            text = v.getFirst().trim();
 
             option = getOptionalLayout(v.get(1));
             // See if there was an undefined formatter:
             for (LayoutFormatter anOption : option) {
-                if (anOption instanceof NotFoundFormatter) {
-                    String notFound = ((NotFoundFormatter) anOption).getNotFound();
+                if (anOption instanceof NotFoundFormatter formatter) {
+                    String notFound = formatter.getNotFound();
 
                     invalidFormatter.add(notFound);
                 }
@@ -435,7 +443,7 @@ class LayoutEntry {
             case "CreateDocBook5Editors" -> new CreateDocBook5Editors();
             case "CurrentDate" -> new CurrentDate();
             case "DateFormatter" -> new DateFormatter();
-            case "DOICheck" -> new DOICheck();
+            case "DOICheck" -> new DOICheck(preferences.getDoiPreferences());
             case "DOIStrip" -> new DOIStrip();
             case "EntryTypeFormatter" -> new EntryTypeFormatter();
             case "FirstPage" -> new FirstPage();
@@ -446,7 +454,7 @@ class LayoutEntry {
             case "HTMLParagraphs" -> new HTMLParagraphs();
             case "Iso690FormatDate" -> new Iso690FormatDate();
             case "Iso690NamesAuthors" -> new Iso690NamesAuthors();
-            case "JournalAbbreviator" -> new JournalAbbreviator(preferences.getJournalAbbreviationRepository());
+            case "JournalAbbreviator" -> new JournalAbbreviator(abbreviationRepository);
             case "LastPage" -> new LastPage();
 // For backward compatibility
             case "FormatChars", "LatexToUnicode" -> new LatexToUnicodeFormatter();
@@ -477,6 +485,7 @@ class LayoutEntry {
             case "CSLType" -> new CSLType();
             case "ShortMonth" -> new ShortMonthFormatter();
             case "ReplaceWithEscapedDoubleQuotes" -> new ReplaceWithEscapedDoubleQuotes();
+            case "HayagrivaType" -> new HayagrivaType();
             default -> null;
         };
     }
@@ -489,7 +498,7 @@ class LayoutEntry {
         List<LayoutFormatter> results = new ArrayList<>(formatterStrings.size());
         Map<String, String> userNameFormatter = NameFormatter.getNameFormatters(preferences.getNameFormatterPreferences());
         for (List<String> strings : formatterStrings) {
-            String nameFormatterName = strings.get(0).trim();
+            String nameFormatterName = strings.getFirst().trim();
 
             // Check if this is a name formatter defined by this export filter:
             Optional<String> contents = preferences.getCustomExportNameFormatter(nameFormatterName);
@@ -504,8 +513,8 @@ class LayoutEntry {
             LayoutFormatter formatter = getLayoutFormatterByName(nameFormatterName);
             if (formatter != null) {
                 // If this formatter accepts an argument, check if we have one, and set it if so
-                if ((formatter instanceof ParamLayoutFormatter) && (strings.size() >= 2)) {
-                    ((ParamLayoutFormatter) formatter).setArgument(strings.get(1));
+                if ((formatter instanceof ParamLayoutFormatter layoutFormatter) && (strings.size() >= 2)) {
+                    layoutFormatter.setArgument(strings.get(1));
                 }
                 results.add(formatter);
                 continue;
