@@ -38,9 +38,9 @@ class OOBibStyleTestHelper {
 
         public CitationMarkerNumericEntryImpl(String citationKey, int num, Optional<OOText> pageInfo) {
             this.citationKey = citationKey;
-            this.num = (num == UNRESOLVED_ENTRY_NUMBER
+            this.num = num == UNRESOLVED_ENTRY_NUMBER
                     ? Optional.empty()
-                    : Optional.of(num));
+                    : Optional.of(num);
             this.pageInfo = PageInfo.normalizePageInfo(pageInfo);
         }
 
@@ -95,10 +95,10 @@ class OOBibStyleTestHelper {
             if (num.size() != 1) {
                 throw new IllegalArgumentException("Numeric label for the bibliography with " + num.size() + " numbers?");
             }
-            int n = num.get(0);
+            int n = num.getFirst();
             CitationMarkerNumericBibEntryImpl x =
                     new CitationMarkerNumericBibEntryImpl("key",
-                            (n == 0) ? Optional.empty() : Optional.of(n));
+                            n == 0 ? Optional.empty() : Optional.of(n));
             return style.getNumCitationMarkerForBibliography(x).toString();
         } else {
             List<CitationMarkerNumericEntry> input =
@@ -153,8 +153,8 @@ class OOBibStyleTestHelper {
         return result;
     }
 
-    /*
-     * Similar to old API. pageInfo is new, and unlimAuthors is
+    /**
+     * @implNote Similar to old API. pageInfo is new, and unlimAuthors is
      * replaced with isFirstAppearanceOfSource
      */
     static String getCitationMarker2ab(OOBibStyle style,
@@ -177,7 +177,7 @@ class OOBibStyleTestHelper {
             isFirstAppearanceOfSource = new Boolean[entries.size()];
             Arrays.fill(isFirstAppearanceOfSource, false);
         }
-        List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>();
+        List<CitationMarkerEntry> citationMarkerEntries = new ArrayList<>(entries.size());
         for (int i = 0; i < entries.size(); i++) {
             BibEntry entry = entries.get(i);
             CitationMarkerEntry e = makeCitationMarkerEntry(entry,
