@@ -8,6 +8,7 @@ import java.util.List;
 
 import javafx.collections.FXCollections;
 
+import org.jabref.logic.journals.JournalAbbreviationRepository;
 import org.jabref.logic.layout.LayoutFormatterPreferences;
 import org.jabref.logic.openoffice.OpenOfficePreferences;
 
@@ -29,35 +30,42 @@ public class StyleLoaderTest {
 
     private OpenOfficePreferences preferences;
     private LayoutFormatterPreferences layoutPreferences;
+    private JournalAbbreviationRepository abbreviationRepository;
 
     @BeforeEach
     public void setUp() {
         preferences = mock(OpenOfficePreferences.class, Answers.RETURNS_DEEP_STUBS);
         layoutPreferences = mock(LayoutFormatterPreferences.class, Answers.RETURNS_DEEP_STUBS);
+        abbreviationRepository = mock(JournalAbbreviationRepository.class);
     }
 
     @Test
     public void throwNPEWithNullPreferences() {
-        assertThrows(NullPointerException.class, () -> loader = new StyleLoader(null, layoutPreferences));
+        assertThrows(NullPointerException.class, () -> loader = new StyleLoader(null, layoutPreferences, abbreviationRepository));
     }
 
     @Test
     public void throwNPEWithNullLayoutPreferences() {
-        assertThrows(NullPointerException.class, () -> loader = new StyleLoader(mock(OpenOfficePreferences.class), null));
+        assertThrows(NullPointerException.class, () -> loader = new StyleLoader(mock(OpenOfficePreferences.class), null, abbreviationRepository));
     }
 
     @Test
-    public void testGetStylesWithEmptyExternal() {
+    public void throwNPEWithNullAbbreviationRepository() {
+        assertThrows(NullPointerException.class, () -> loader = new StyleLoader(mock(OpenOfficePreferences.class), layoutPreferences, null));
+    }
+
+    @Test
+    public void getStylesWithEmptyExternal() {
         preferences.setExternalStyles(Collections.emptyList());
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
 
         assertEquals(2, loader.getStyles().size());
     }
 
     @Test
-    public void testAddStyleLeadsToOneMoreStyle() throws URISyntaxException {
+    public void addStyleLeadsToOneMoreStyle() throws URISyntaxException {
         preferences.setExternalStyles(Collections.emptyList());
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
 
         String filename = Path.of(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
                               .toFile().getPath();
@@ -66,38 +74,38 @@ public class StyleLoaderTest {
     }
 
     @Test
-    public void testAddInvalidStyleLeadsToNoMoreStyle() {
+    public void addInvalidStyleLeadsToNoMoreStyle() {
         preferences.setExternalStyles(Collections.emptyList());
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         int beforeAdding = loader.getStyles().size();
         loader.addStyleIfValid("DefinitelyNotAValidFileNameOrWeAreExtremelyUnlucky");
         assertEquals(beforeAdding, loader.getStyles().size());
     }
 
     @Test
-    public void testInitalizeWithOneExternalFile() throws URISyntaxException {
+    public void initalizeWithOneExternalFile() throws URISyntaxException {
         String filename = Path.of(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
                               .toFile().getPath();
         when(preferences.getExternalStyles()).thenReturn(FXCollections.singletonObservableList(filename));
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         assertEquals(NUMBER_OF_INTERNAL_STYLES + 1, loader.getStyles().size());
     }
 
     @Test
-    public void testInitalizeWithIncorrectExternalFile() {
+    public void initalizeWithIncorrectExternalFile() {
         preferences.setExternalStyles(Collections.singletonList("DefinitelyNotAValidFileNameOrWeAreExtremelyUnlucky"));
 
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         assertEquals(NUMBER_OF_INTERNAL_STYLES, loader.getStyles().size());
     }
 
     @Test
-    public void testInitalizeWithOneExternalFileRemoveStyle() throws URISyntaxException {
+    public void initalizeWithOneExternalFileRemoveStyle() throws URISyntaxException {
         String filename = Path.of(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
                               .toFile().getPath();
         when(preferences.getExternalStyles()).thenReturn(FXCollections.singletonObservableList(filename));
 
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         List<OOBibStyle> toremove = new ArrayList<>();
         int beforeRemoving = loader.getStyles().size();
         for (OOBibStyle style : loader.getStyles()) {
@@ -113,12 +121,12 @@ public class StyleLoaderTest {
     }
 
     @Test
-    public void testInitalizeWithOneExternalFileRemoveStyleUpdatesPreferences() throws URISyntaxException {
+    public void initalizeWithOneExternalFileRemoveStyleUpdatesPreferences() throws URISyntaxException {
         String filename = Path.of(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
                               .toFile().getPath();
         when(preferences.getExternalStyles()).thenReturn(FXCollections.singletonObservableList(filename));
 
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         List<OOBibStyle> toremove = new ArrayList<>();
         for (OOBibStyle style : loader.getStyles()) {
             if (!style.isInternalStyle()) {
@@ -134,9 +142,9 @@ public class StyleLoaderTest {
     }
 
     @Test
-    public void testAddSameStyleTwiceLeadsToOneMoreStyle() throws URISyntaxException {
+    public void addSameStyleTwiceLeadsToOneMoreStyle() throws URISyntaxException {
         preferences.setExternalStyles(Collections.emptyList());
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         int beforeAdding = loader.getStyles().size();
         String filename = Path.of(StyleLoader.class.getResource(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH).toURI())
                               .toFile().getPath();
@@ -146,16 +154,16 @@ public class StyleLoaderTest {
     }
 
     @Test
-    public void testAddNullStyleThrowsNPE() {
-        loader = new StyleLoader(preferences, layoutPreferences);
+    public void addNullStyleThrowsNPE() {
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         assertThrows(NullPointerException.class, () -> loader.addStyleIfValid(null));
     }
 
     @Test
-    public void testGetDefaultUsedStyleWhenEmpty() {
+    public void getDefaultUsedStyleWhenEmpty() {
         when(preferences.getCurrentStyle()).thenReturn(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH);
         preferences.clearCurrentStyle();
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         OOBibStyle style = loader.getUsedStyle();
         assertTrue(style.isValid());
         assertEquals(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH, style.getPath());
@@ -163,9 +171,9 @@ public class StyleLoaderTest {
     }
 
     @Test
-    public void testGetStoredUsedStyle() {
+    public void getStoredUsedStyle() {
         when(preferences.getCurrentStyle()).thenReturn(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH);
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         OOBibStyle style = loader.getUsedStyle();
         assertTrue(style.isValid());
         assertEquals(StyleLoader.DEFAULT_NUMERICAL_STYLE_PATH, style.getPath());
@@ -173,19 +181,19 @@ public class StyleLoaderTest {
     }
 
     @Test
-    public void testGetDefaultUsedStyleWhenIncorrect() {
+    public void getDefaultUsedStyleWhenIncorrect() {
         when(preferences.getCurrentStyle()).thenReturn("ljlkjlkjnljnvdlsjniuhwelfhuewfhlkuewhfuwhelu");
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         OOBibStyle style = loader.getUsedStyle();
         assertTrue(style.isValid());
         assertEquals(StyleLoader.DEFAULT_AUTHORYEAR_STYLE_PATH, style.getPath());
     }
 
     @Test
-    public void testRemoveInternalStyleReturnsFalseAndDoNotRemove() {
+    public void removeInternalStyleReturnsFalseAndDoNotRemove() {
         preferences.setExternalStyles(Collections.emptyList());
 
-        loader = new StyleLoader(preferences, layoutPreferences);
+        loader = new StyleLoader(preferences, layoutPreferences, abbreviationRepository);
         List<OOBibStyle> toremove = new ArrayList<>();
         for (OOBibStyle style : loader.getStyles()) {
             if (style.isInternalStyle()) {
@@ -193,7 +201,7 @@ public class StyleLoaderTest {
             }
         }
 
-        assertFalse(loader.removeStyle(toremove.get(0)));
+        assertFalse(loader.removeStyle(toremove.getFirst()));
         assertEquals(NUMBER_OF_INTERNAL_STYLES, loader.getStyles().size());
     }
 }
