@@ -5,7 +5,7 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
-import org.jabref.logic.citationkeypattern.GlobalCitationKeyPattern;
+import org.jabref.logic.citationkeypattern.GlobalCitationKeyPatterns;
 import org.jabref.logic.cleanup.FieldFormatterCleanup;
 import org.jabref.logic.cleanup.FieldFormatterCleanups;
 import org.jabref.logic.exporter.MetaDataSerializer;
@@ -37,7 +37,7 @@ public class DBMSSynchronizerTest {
 
     private DBMSSynchronizer dbmsSynchronizer;
     private BibDatabase bibDatabase;
-    private final GlobalCitationKeyPattern pattern = GlobalCitationKeyPattern.fromPattern("[auth][year]");
+    private final GlobalCitationKeyPatterns pattern = GlobalCitationKeyPatterns.fromPattern("[auth][year]");
     private DBMSConnection dbmsConnection;
     private DBMSProcessor dbmsProcessor;
     private DBMSType dbmsType;
@@ -73,7 +73,7 @@ public class DBMSSynchronizerTest {
     }
 
     @Test
-    public void testEntryAddedEventListener() throws Exception {
+    public void entryAddedEventListener() throws Exception {
         BibEntry expectedEntry = createExampleBibEntry(1);
         BibEntry furtherEntry = createExampleBibEntry(1);
 
@@ -118,13 +118,13 @@ public class DBMSSynchronizerTest {
     }
 
     @Test
-    public void testEntriesRemovedEventListener() throws Exception {
+    public void entriesRemovedEventListener() throws Exception {
         BibEntry bibEntry = createExampleBibEntry(1);
         bibDatabase.insertEntry(bibEntry);
 
         List<BibEntry> actualEntries = dbmsProcessor.getSharedEntries();
         assertEquals(1, actualEntries.size());
-        assertEquals(bibEntry, actualEntries.get(0));
+        assertEquals(bibEntry, actualEntries.getFirst());
 
         bibDatabase.removeEntry(bibEntry);
         actualEntries = dbmsProcessor.getSharedEntries();
@@ -136,11 +136,11 @@ public class DBMSSynchronizerTest {
 
         actualEntries = dbmsProcessor.getSharedEntries();
         assertEquals(1, actualEntries.size());
-        assertEquals(bibEntry, actualEntries.get(0));
+        assertEquals(bibEntry, actualEntries.getFirst());
     }
 
     @Test
-    public void testMetaDataChangedEventListener() throws Exception {
+    public void metaDataChangedEventListener() throws Exception {
         MetaData testMetaData = new MetaData();
         testMetaData.registerListener(dbmsSynchronizer);
         dbmsSynchronizer.setMetaData(testMetaData);
@@ -154,7 +154,7 @@ public class DBMSSynchronizerTest {
     }
 
     @Test
-    public void testInitializeDatabases() throws Exception {
+    public void initializeDatabases() throws Exception {
         dbmsSynchronizer.initializeDatabases();
         assertTrue(dbmsProcessor.checkBaseIntegrity());
         dbmsSynchronizer.initializeDatabases();
@@ -162,10 +162,10 @@ public class DBMSSynchronizerTest {
     }
 
     @Test
-    public void testSynchronizeLocalDatabaseWithEntryRemoval() throws Exception {
+    public void synchronizeLocalDatabaseWithEntryRemoval() throws Exception {
         List<BibEntry> expectedBibEntries = Arrays.asList(createExampleBibEntry(1), createExampleBibEntry(2));
 
-        dbmsProcessor.insertEntry(expectedBibEntries.get(0));
+        dbmsProcessor.insertEntry(expectedBibEntries.getFirst());
         dbmsProcessor.insertEntry(expectedBibEntries.get(1));
 
         assertTrue(bibDatabase.getEntries().isEmpty());
@@ -174,7 +174,7 @@ public class DBMSSynchronizerTest {
 
         assertEquals(expectedBibEntries, bibDatabase.getEntries());
 
-        dbmsProcessor.removeEntries(Collections.singletonList(expectedBibEntries.get(0)));
+        dbmsProcessor.removeEntries(Collections.singletonList(expectedBibEntries.getFirst()));
 
         expectedBibEntries = Collections.singletonList(expectedBibEntries.get(1));
 
@@ -184,7 +184,7 @@ public class DBMSSynchronizerTest {
     }
 
     @Test
-    public void testSynchronizeLocalDatabaseWithEntryUpdate() throws Exception {
+    public void synchronizeLocalDatabaseWithEntryUpdate() throws Exception {
         BibEntry bibEntry = createExampleBibEntry(1);
         bibDatabase.insertEntry(bibEntry);
         assertEquals(List.of(bibEntry), bibDatabase.getEntries());
@@ -220,7 +220,7 @@ public class DBMSSynchronizerTest {
     }
 
     @Test
-    public void testApplyMetaData() throws Exception {
+    public void applyMetaData() throws Exception {
         BibEntry bibEntry = createExampleBibEntry(1);
         bibDatabase.insertEntry(bibEntry);
 
