@@ -2,9 +2,11 @@ package org.jabref.logic.texparser;
 
 import java.net.URISyntaxException;
 import java.nio.file.Path;
-import java.util.Arrays;
+import java.util.List;
+import java.util.Optional;
 
 import org.jabref.model.texparser.LatexParserResult;
+import org.jabref.model.texparser.LatexParserResults;
 
 import org.junit.jupiter.api.Test;
 
@@ -21,23 +23,24 @@ public class DefaultTexParserTest {
     private final static String UNKNOWN = "UnknownKey";
 
     private void testMatchCite(String key, String citeString) {
+        Path path = Path.of("");
         LatexParserResult latexParserResult = new DefaultLatexParser().parse(citeString);
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResult expectedParserResult = new LatexParserResult(path);
 
-        expectedParserResult.addKey(key, Path.of(""), 1, 0, citeString.length(), citeString);
+        expectedParserResult.addKey(key, path, 1, 0, citeString.length(), citeString);
 
         assertEquals(expectedParserResult, latexParserResult);
     }
 
     private void testNonMatchCite(String citeString) {
         LatexParserResult latexParserResult = new DefaultLatexParser().parse(citeString);
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResult expectedParserResult = new LatexParserResult(Path.of(""));
 
         assertEquals(expectedParserResult, latexParserResult);
     }
 
     @Test
-    public void testCiteCommands() {
+    public void citeCommands() {
         testMatchCite(UNRESOLVED, "\\cite[pre][post]{UnresolvedKey}");
         testMatchCite(UNRESOLVED, "\\cite*{UnresolvedKey}");
         testMatchCite(UNRESOLVED, "\\parencite[post]{UnresolvedKey}");
@@ -55,91 +58,85 @@ public class DefaultTexParserTest {
     }
 
     @Test
-    public void testTwoCitationsSameLine() {
+    public void twoCitationsSameLine() {
+        Path path = Path.of("");
         String citeString = "\\citep{Einstein1920c} and \\citep{Einstein1920a}";
 
         LatexParserResult latexParserResult = new DefaultLatexParser().parse(citeString);
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResult expectedParserResult = new LatexParserResult(path);
 
-        expectedParserResult.addKey(EINSTEIN_C, Path.of(""), 1, 0, 21, citeString);
-        expectedParserResult.addKey(EINSTEIN_A, Path.of(""), 1, 26, 47, citeString);
+        expectedParserResult.addKey(EINSTEIN_C, path, 1, 0, 21, citeString);
+        expectedParserResult.addKey(EINSTEIN_A, path, 1, 26, 47, citeString);
 
         assertEquals(expectedParserResult, latexParserResult);
     }
 
     @Test
-    public void testFileEncodingUtf8() throws URISyntaxException {
+    public void fileEncodingUtf8() throws URISyntaxException {
         Path texFile = Path.of(DefaultTexParserTest.class.getResource("utf-8.tex").toURI());
 
-        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile).get();
+        LatexParserResult expectedParserResult = new LatexParserResult(texFile);
 
-        expectedParserResult.getFileList().add(texFile);
         expectedParserResult.addKey("anykey", texFile, 1, 32, 45, "Danach wir anschließend mittels \\cite{anykey}.");
 
         assertEquals(expectedParserResult, parserResult);
     }
 
     @Test
-    public void testFileEncodingIso88591() throws URISyntaxException {
+    public void fileEncodingIso88591() throws URISyntaxException {
         Path texFile = Path.of(DefaultTexParserTest.class.getResource("iso-8859-1.tex").toURI());
 
-        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile).get();
+        LatexParserResult expectedParserResult = new LatexParserResult(texFile);
 
-        expectedParserResult.getFileList().add(texFile);
         // The character � is on purpose - we cannot use Apache Tika's CharsetDetector - see ADR-0005
-        expectedParserResult
-                .addKey("anykey", texFile, 1, 32, 45, "Danach wir anschlie�end mittels \\cite{anykey}.");
+        expectedParserResult.addKey("anykey", texFile, 1, 32, 45, "Danach wir anschlie�end mittels \\cite{anykey}.");
 
         assertEquals(expectedParserResult, parserResult);
     }
 
     @Test
-    public void testFileEncodingIso885915() throws URISyntaxException {
+    public void fileEncodingIso885915() throws URISyntaxException {
         Path texFile = Path.of(DefaultTexParserTest.class.getResource("iso-8859-15.tex").toURI());
 
-        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile).get();
+        LatexParserResult expectedParserResult = new LatexParserResult(texFile);
 
-        expectedParserResult.getFileList().add(texFile);
         // The character � is on purpose - we cannot use Apache Tika's CharsetDetector - see ADR-0005
-        expectedParserResult
-                .addKey("anykey", texFile, 1, 32, 45, "Danach wir anschlie�end mittels \\cite{anykey}.");
+        expectedParserResult.addKey("anykey", texFile, 1, 32, 45, "Danach wir anschlie�end mittels \\cite{anykey}.");
 
         assertEquals(expectedParserResult, parserResult);
     }
 
     @Test
-    public void testFileEncodingForThreeFiles() throws URISyntaxException {
+    public void fileEncodingForThreeFiles() throws URISyntaxException {
         Path texFile = Path.of(DefaultTexParserTest.class.getResource("utf-8.tex").toURI());
         Path texFile2 = Path.of(DefaultTexParserTest.class.getResource("iso-8859-1.tex").toURI());
         Path texFile3 = Path.of(DefaultTexParserTest.class.getResource("iso-8859-15.tex").toURI());
 
-        LatexParserResult parserResult = new DefaultLatexParser()
-                .parse(Arrays.asList(texFile, texFile2, texFile3));
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResults parserResults = new DefaultLatexParser().parse(List.of(texFile, texFile2, texFile3));
 
-        expectedParserResult.getFileList().addAll(Arrays.asList(texFile, texFile2, texFile3));
-        expectedParserResult
-                .addKey("anykey", texFile, 1, 32, 45, "Danach wir anschließend mittels \\cite{anykey}.");
-        expectedParserResult
-                .addKey("anykey", texFile2, 1, 32, 45, "Danach wir anschlie�end mittels \\cite{anykey}.");
-        expectedParserResult
-                .addKey("anykey", texFile3, 1, 32, 45, "Danach wir anschlie�end mittels \\cite{anykey}.");
+        LatexParserResult result1 = new LatexParserResult(texFile);
+        result1.addKey("anykey", texFile, 1, 32, 45, "Danach wir anschließend mittels \\cite{anykey}.");
+        LatexParserResult result2 = new LatexParserResult(texFile2);
+        result2.addKey("anykey", texFile2, 1, 32, 45, "Danach wir anschlie�end mittels \\cite{anykey}.");
+        LatexParserResult result3 = new LatexParserResult(texFile3);
+        result3.addKey("anykey", texFile3, 1, 32, 45, "Danach wir anschlie�end mittels \\cite{anykey}.");
 
-        assertEquals(expectedParserResult, parserResult);
+        LatexParserResults expectedParserResults = new LatexParserResults(result1, result2, result3);
+
+        assertEquals(expectedParserResults, parserResults);
     }
 
     @Test
-    public void testSingleFile() throws URISyntaxException {
+    public void singleFile() throws URISyntaxException {
         Path texFile = Path.of(DefaultTexParserTest.class.getResource("paper.tex").toURI());
 
-        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile).get();
+        LatexParserResult expectedParserResult = new LatexParserResult(texFile);
 
-        expectedParserResult.getFileList().add(texFile);
-        expectedParserResult.addBibFile(texFile, texFile.getParent().resolve("origin.bib"));
+        expectedParserResult.addBibFile(texFile.getParent().resolve("origin.bib"));
         expectedParserResult.addKey(EINSTEIN, texFile, 4, 0, 19, "\\cite{Einstein1920}");
         expectedParserResult.addKey(DARWIN, texFile, 5, 0, 17, "\\cite{Darwin1888}.");
         expectedParserResult.addKey(EINSTEIN, texFile, 6, 14, 33, "Einstein said \\cite{Einstein1920} that lorem impsum, consectetur adipiscing elit.");
@@ -149,53 +146,57 @@ public class DefaultTexParserTest {
     }
 
     @Test
-    public void testTwoFiles() throws URISyntaxException {
+    public void twoFiles() throws URISyntaxException {
         Path texFile = Path.of(DefaultTexParserTest.class.getResource("paper.tex").toURI());
         Path texFile2 = Path.of(DefaultTexParserTest.class.getResource("paper2.tex").toURI());
 
-        LatexParserResult parserResult = new DefaultLatexParser().parse(Arrays.asList(texFile, texFile2));
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResults parserResults = new DefaultLatexParser().parse(List.of(texFile, texFile2));
 
-        expectedParserResult.getFileList().addAll(Arrays.asList(texFile, texFile2));
-        expectedParserResult.addBibFile(texFile, texFile.getParent().resolve("origin.bib"));
-        expectedParserResult.addBibFile(texFile2, texFile2.getParent().resolve("origin.bib"));
-        expectedParserResult.addKey(EINSTEIN, texFile, 4, 0, 19, "\\cite{Einstein1920}");
-        expectedParserResult.addKey(DARWIN, texFile, 5, 0, 17, "\\cite{Darwin1888}.");
-        expectedParserResult.addKey(EINSTEIN, texFile, 6, 14, 33, "Einstein said \\cite{Einstein1920} that lorem impsum, consectetur adipiscing elit.");
-        expectedParserResult.addKey(DARWIN, texFile, 7, 67, 84, "Nunc ultricies leo nec libero rhoncus, eu vehicula enim efficitur. \\cite{Darwin1888}");
-        expectedParserResult.addKey(DARWIN, texFile2, 4, 48, 65, "This is some content trying to cite a bib file: \\cite{Darwin1888}");
-        expectedParserResult.addKey(EINSTEIN, texFile2, 5, 48, 67, "This is some content trying to cite a bib file: \\cite{Einstein1920}");
-        expectedParserResult.addKey(NEWTON, texFile2, 6, 48, 65, "This is some content trying to cite a bib file: \\cite{Newton1999}");
+        LatexParserResult result1 = new LatexParserResult(texFile);
+        result1.addBibFile(texFile.getParent().resolve("origin.bib"));
+        result1.addKey(EINSTEIN, texFile, 4, 0, 19, "\\cite{Einstein1920}");
+        result1.addKey(DARWIN, texFile, 5, 0, 17, "\\cite{Darwin1888}.");
+        result1.addKey(EINSTEIN, texFile, 6, 14, 33, "Einstein said \\cite{Einstein1920} that lorem impsum, consectetur adipiscing elit.");
+        result1.addKey(DARWIN, texFile, 7, 67, 84, "Nunc ultricies leo nec libero rhoncus, eu vehicula enim efficitur. \\cite{Darwin1888}");
 
-        assertEquals(expectedParserResult, parserResult);
+        LatexParserResult result2 = new LatexParserResult(texFile2);
+        result2.addBibFile(texFile2.getParent().resolve("origin.bib"));
+        result2.addKey(DARWIN, texFile2, 4, 48, 65, "This is some content trying to cite a bib file: \\cite{Darwin1888}");
+        result2.addKey(EINSTEIN, texFile2, 5, 48, 67, "This is some content trying to cite a bib file: \\cite{Einstein1920}");
+        result2.addKey(NEWTON, texFile2, 6, 48, 65, "This is some content trying to cite a bib file: \\cite{Newton1999}");
+
+        LatexParserResults expectedParserResults = new LatexParserResults(result1, result2);
+
+        assertEquals(expectedParserResults, parserResults);
     }
 
     @Test
-    public void testDuplicateFiles() throws URISyntaxException {
+    public void duplicateFiles() throws URISyntaxException {
         Path texFile = Path.of(DefaultTexParserTest.class.getResource("paper.tex").toURI());
 
-        LatexParserResult parserResult = new DefaultLatexParser().parse(Arrays.asList(texFile, texFile));
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResults parserResults = new DefaultLatexParser().parse(List.of(texFile, texFile));
 
-        expectedParserResult.getFileList().addAll(Arrays.asList(texFile, texFile));
-        expectedParserResult.addBibFile(texFile, texFile.getParent().resolve("origin.bib"));
-        expectedParserResult.addKey(EINSTEIN, texFile, 4, 0, 19, "\\cite{Einstein1920}");
-        expectedParserResult.addKey(DARWIN, texFile, 5, 0, 17, "\\cite{Darwin1888}.");
-        expectedParserResult.addKey(EINSTEIN, texFile, 6, 14, 33, "Einstein said \\cite{Einstein1920} that lorem impsum, consectetur adipiscing elit.");
-        expectedParserResult.addKey(DARWIN, texFile, 7, 67, 84, "Nunc ultricies leo nec libero rhoncus, eu vehicula enim efficitur. \\cite{Darwin1888}");
+        LatexParserResult result = new LatexParserResult(texFile);
 
-        assertEquals(expectedParserResult, parserResult);
+        result.addBibFile(texFile.getParent().resolve("origin.bib"));
+        result.addKey(EINSTEIN, texFile, 4, 0, 19, "\\cite{Einstein1920}");
+        result.addKey(DARWIN, texFile, 5, 0, 17, "\\cite{Darwin1888}.");
+        result.addKey(EINSTEIN, texFile, 6, 14, 33, "Einstein said \\cite{Einstein1920} that lorem impsum, consectetur adipiscing elit.");
+        result.addKey(DARWIN, texFile, 7, 67, 84, "Nunc ultricies leo nec libero rhoncus, eu vehicula enim efficitur. \\cite{Darwin1888}");
+
+        LatexParserResults expectedParserResults = new LatexParserResults(result, result);
+
+        assertEquals(expectedParserResults, parserResults);
     }
 
     @Test
-    public void testUnknownKey() throws URISyntaxException {
+    public void unknownKey() throws URISyntaxException {
         Path texFile = Path.of(DefaultTexParserTest.class.getResource("unknown_key.tex").toURI());
 
-        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile).get();
+        LatexParserResult expectedParserResult = new LatexParserResult(texFile);
 
-        expectedParserResult.getFileList().add(texFile);
-        expectedParserResult.addBibFile(texFile, texFile.getParent().resolve("origin.bib"));
+        expectedParserResult.addBibFile(texFile.getParent().resolve("origin.bib"));
         expectedParserResult.addKey(DARWIN, texFile, 4, 48, 65, "This is some content trying to cite a bib file: \\cite{Darwin1888}");
         expectedParserResult.addKey(EINSTEIN, texFile, 5, 48, 67, "This is some content trying to cite a bib file: \\cite{Einstein1920}");
         expectedParserResult.addKey(UNKNOWN, texFile, 6, 48, 65, "This is some content trying to cite a bib file: \\cite{UnknownKey}");
@@ -204,35 +205,21 @@ public class DefaultTexParserTest {
     }
 
     @Test
-    public void testFileNotFound() {
+    public void fileNotFound() {
         Path texFile = Path.of("file_not_found.tex");
-
-        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
-        LatexParserResult expectedParserResult = new LatexParserResult();
-
-        expectedParserResult.getFileList().add(texFile);
-
-        assertEquals(expectedParserResult, parserResult);
+        Optional<LatexParserResult> parserResult = new DefaultLatexParser().parse(texFile);
+        assertEquals(Optional.empty(), parserResult);
     }
 
     @Test
-    public void testNestedFiles() throws URISyntaxException {
+    public void nestedFiles() throws URISyntaxException {
         Path texFile = Path.of(DefaultTexParserTest.class.getResource("nested.tex").toURI());
-        Path texFile2 = Path.of(DefaultTexParserTest.class.getResource("nested2.tex").toURI());
-        Path texFile3 = Path.of(DefaultTexParserTest.class.getResource("paper.tex").toURI());
 
-        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile);
-        LatexParserResult expectedParserResult = new LatexParserResult();
+        LatexParserResult parserResult = new DefaultLatexParser().parse(texFile).get();
+        LatexParserResult expectedParserResult = new LatexParserResult(texFile);
 
-        expectedParserResult.getFileList().add(texFile);
-        expectedParserResult.getNestedFiles().addAll(Arrays.asList(texFile2, texFile3));
-        expectedParserResult.addBibFile(texFile, texFile.getParent().resolve("origin.bib"));
-        expectedParserResult.addBibFile(texFile2, texFile2.getParent().resolve("origin.bib"));
-        expectedParserResult.addBibFile(texFile3, texFile3.getParent().resolve("origin.bib"));
-        expectedParserResult.addKey(EINSTEIN, texFile3, 4, 0, 19, "\\cite{Einstein1920}");
-        expectedParserResult.addKey(DARWIN, texFile3, 5, 0, 17, "\\cite{Darwin1888}.");
-        expectedParserResult.addKey(EINSTEIN, texFile3, 6, 14, 33, "Einstein said \\cite{Einstein1920} that lorem impsum, consectetur adipiscing elit.");
-        expectedParserResult.addKey(DARWIN, texFile3, 7, 67, 84, "Nunc ultricies leo nec libero rhoncus, eu vehicula enim efficitur. \\cite{Darwin1888}");
+        expectedParserResult.addBibFile(texFile.getParent().resolve("origin.bib"));
+        expectedParserResult.addNestedFile(texFile.getParent().resolve("nested2.tex"));
 
         assertEquals(expectedParserResult, parserResult);
     }
