@@ -72,7 +72,7 @@ class XmpUtilWriterTest {
             .withField(StandardField.LANGUAGE, "English, Japanese")
             .withDate(new Date(2000, 5))
             .withField(new UnknownField(DC_COVERAGE), "coverageField")
-            .withField(new UnknownField((DC_SOURCE)), "JabRef")
+            .withField(new UnknownField(DC_SOURCE), "JabRef")
             .withField(new UnknownField(DC_RIGHTS), "Right To X");
     private XmpPreferences xmpPreferences;
 
@@ -94,7 +94,7 @@ class XmpUtilWriterTest {
 
         List<BibEntry> entriesWritten = new XmpUtilReader().readXmp(pdfFile, xmpPreferences);
 
-        BibEntry entryWritten = entriesWritten.get(0);
+        BibEntry entryWritten = entriesWritten.getFirst();
         entryWritten.clearField(StandardField.FILE);
         entry.clearField(StandardField.FILE);
 
@@ -117,7 +117,7 @@ class XmpUtilWriterTest {
     }
 
     @Test
-    void testWriteTwoBibEntries(@TempDir Path tempDir) throws Exception {
+    void writeTwoBibEntries(@TempDir Path tempDir) throws Exception {
         Path pdfFile = this.createDefaultFile("JabRef_writeTwo.pdf", tempDir);
         List<BibEntry> entries = List.of(olly2018, toral2006);
         new XmpUtilWriter(xmpPreferences).writeXmp(pdfFile.toAbsolutePath(), entries, null);
@@ -132,7 +132,7 @@ class XmpUtilWriterTest {
     }
 
     @Test
-    void testWriteThreeBibEntries(@TempDir Path tempDir) throws Exception {
+    void writeThreeBibEntries(@TempDir Path tempDir) throws Exception {
         Path pdfFile = this.createDefaultFile("JabRef_writeThree.pdf", tempDir);
         List<BibEntry> entries = List.of(olly2018, vapnik2000, toral2006);
         new XmpUtilWriter(xmpPreferences).writeXmp(pdfFile.toAbsolutePath(), entries, null);
